# Cactus_Agent

./: .env.example  .gitignore  DEBUG.md  README.md  TODOS.md  project.yml  pyproject.toml
Cactus.xcodeproj/: project.pbxproj
Cactus.xcodeproj/xcshareddata/xcschemes/: Cactus.xcscheme
CactusFFI/: cactus_shim.h  module.modulemap
Jarvis.xcodeproj/: project.pbxproj
Jarvis.xcodeproj/xcshareddata/xcschemes/: Jarvis.xcscheme
Sources/JarvisApp/App/: JarvisApp.swift  VoiceAssistantController.swift
Sources/JarvisApp/Models/: TaskMetadata.swift  VoiceAssistantState.swift
Sources/JarvisApp/Services/: AppEnvironment.swift  AudioCaptureService.swift  CactusTranscriptionService.swift  LiveTranscriptionService.swift  SpeechFeedbackService.swift  TaskParsingService.swift
Sources/JarvisApp/UI/: AssistantBubbleView.swift  ControlPanelView.swift  OverlayWindowController.swift  TaskTabView.swift
Sources/JarvisApp/Utils/: AppConfig.swift
Tests/JarvisAppTests/: JarvisAppTests.swift
assets/: demo-portal.html
docs/: DESIGN.md  TEST_PLAN.md
tests/: smoke_live_e4b.py  smoke_live_functiongemma.py  test_browser_session_factory.py  test_browser_use_adapter.py  test_cactus_chat_escalation.py  test_command_assembler.py  test_config.py  test_desktop_app_launcher.py  test_events.py  test_gemini_client.py  test_main_intents.py  test_native_reducer.py  test_orchestrator.py  test_screen_reader_tool.py  test_tool_router.py  test_tts.py  test_vision_desktop_tool.py  test_voice_debug.py  test_voice_loop.py  test_wake_filter.py
voice_agent/: config.py  events.py  main.py  server.py
voice_agent/agent/: browser_session_factory.py  browser_use_adapter.py  cactus_chat_model.py  desktop_app_launcher.py  gemini_client.py  mcp_client.py  orchestrator.py  screen_reader_tool.py  system_prompts.py  tool_router.py  vision_desktop_tool.py
voice_agent/ui/native/: __init__.py  bridge.py  companion.py  orb.py  previews.py  reducer.py  tokens.py
voice_agent/voice/: command_assembler.py  debug_recorder.py  stt.py  tts.py  vad.py  wake_filter.py
