[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-agent"
version = "0.1.0"
description = "On-device voice computer-use agent for macOS (Cactus + Gemma 4 + MCP + Browser Use)"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Isaac Zhang" }]
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "PySide6>=6.7",
    "qasync>=0.27",
    "sounddevice>=0.4.6",
    "mss>=9.0",
    "pyautogui>=0.9.54",
    "browser-use>=0.2,<0.4",
    "playwright>=1.47",
    "mcp>=1.0",
    "google-genai>=1.0",
    # cactus Python bindings are installed editable via `cactus build --python`
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
    "hypothesis>=6.98",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
voice-agent = "voice_agent.main:main"

[tool.setuptools.packages.find]
include = ["voice_agent*"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
    "cactus/",
    "build/",
    "tests/evals/",
]
# Strict subset: catch real bugs without forcing every FFI call site to be
# typed. FFI wrappers in cactus.python.src.cactus are runtime-typed only.
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
# Intentionally NOT enabled:
#   disallow_untyped_calls  -- FFI surface is untyped
#   disallow_untyped_defs   -- FFI surface is untyped
#   disallow_any_explicit   -- Used intentionally at Browser Use / protobuf boundaries

[[tool.mypy.overrides]]
module = "cactus.*"
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
